# data-fmt-bench

./: .gitignore  main.py  pyproject.toml
docs/: background-0518.md
